--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GLong</string>
-    <string name="connect">Connect</string>
+    <string name="send">Send</string>
+    <string name="bluetooth">Bluetooth</string>
     <string name="bt_service_ready">Bluetooth service ready</string>
 </resources>
