Changed project/app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GLong</string>
+    <string name="app_name">GlApp</string>
     <string name="welcome_message">Connect to board</string>
     <string name="bluetooth">Bluetooth</string>
     <string name="bt_service_ready">Bluetooth service ready</string>
