--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,35 @@
 <resources>
     <string name="app_name">GlApp</string>
-    <string name="welcome_message">Connect to board</string>
-    <string name="bluetooth">Bluetooth</string>
+    <string name="board_name">GlBoard</string>
+
+    <string name="enable_bluetooth">Enable Bluetooth</string>
+    <string name="connect_to_board">Connect to board</string>
     <string name="bt_service_ready">Bluetooth service ready</string>
     <string name="press_back_again_to_exit">Press back again to exit</string>
     <string name="ready">Ready</string>
+    <string name="connect">Connect</string>
+
+    <!-- Connection Preferences -->
+    <string name="connection">Connection</string>
+    <string name="disconnect">Disconnect</string>
+    <string name="bluetooth_ssid_of_board">Bluetooth SSID of board</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Board Preferences -->
+    <string name="board">Board</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <!-- Menu -->
+    <string name="direction">Direction</string>
+    <string name="settings">Settings</string>
+    <string name="bluetooth">Bluetooth</string>
+
+    <string name="backward">Backward</string>
+    <string name="forward">Forward</string>
+    <string name="general">General</string>
+    <string name="connect_on_app_start">Connect on app start</string>
+
 </resources>
