--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,34 +2,53 @@
     <string name="app_name">GlApp</string>
     <string name="board_name">GlBoard</string>
 
-    <string name="enable_bluetooth">Enable Bluetooth</string>
-    <string name="connect_to_board">Connect to board</string>
-    <string name="bt_service_ready">Bluetooth service ready</string>
-    <string name="press_back_again_to_exit">Press back again to exit</string>
-    <string name="ready">Ready</string>
-    <string name="connect">Connect</string>
-
-    <!-- Connection Preferences -->
-    <string name="connection">Connection</string>
-    <string name="disconnect">Disconnect</string>
-    <string name="bluetooth_ssid_of_board">Bluetooth SSID of board</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Board Preferences -->
-    <string name="board">Board</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
-
     <!-- Menu -->
     <string name="direction">Direction</string>
     <string name="settings">Settings</string>
     <string name="bluetooth">Bluetooth</string>
-
+    <string name="connect">Connect</string>
+    <string name="disconnect">Disconnect</string>
     <string name="backward">Backward</string>
     <string name="forward">Forward</string>
-    <string name="general">General</string>
+
+    <!-- Drive screen -->
+    <string name="ready">Ready</string>
+    <string name="enable_bluetooth">Enable Bluetooth</string>
+    <string name="connect_to_board">Connect to board</string>
+
+    <!-- Preferences -->
+
+    <!-- Connection Preferences -->
+    <string name="connection">Connection</string>
     <string name="connect_on_app_start">Connect on app start</string>
+    <string name="connect_to">Connect to</string>
+    <string name="select_specific_paired_bluetooth_device">Select specific paired Bluetooth device</string>
+    <string name="board_bluetooth_ssid">Board bluetooth SSID</string>
+
+    <!-- Board Preferences -->
+    <string name="board">Board</string>
+
+    <!-- Drive Preferences -->
+    <string name="drive_configuration">Drive configuration</string>
+    <string name="max_throttle_power">Max throttle power</string>
+    <string name="max_brake_power">Max brake power</string>
+    <string name="amps">Amps</string>
+    <string name="smooth_acceleration">Smooth acceleration</string>
+    <string name="smooth_acceleration_on">Acceleration spikes will be smoothed out</string>
+    <string name="smooth_acceleration_off">Instantly accelerate to selected throttle power</string>
+
+    <!-- Interface Preferences -->
+    <string name="app_interface">Interface</string>
+    <string name="board_data_displayed_on_drive_screen">Board data displayed on drive screen</string>
+    <string name="select_board_data_to_display">Select board data to display</string>
+
+    <!-- General Preferences -->
+    <string name="general">General</string>
+    <string name="debug_mode">Debug mode</string>
+    <string name="display_debug_preferences_and_data">Display debug preferences and data</string>
+    <string name="reset_preferences">Reset preferences</string>
+
+    <!-- Others -->
+    <string name="press_back_again_to_exit">Press back again to exit</string>
 
 </resources>
