Updated themes and added lights icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,6 @@
 
     <!-- Others -->
     <string name="press_back_again_to_exit">Press back again to exit</string>
+    <string name="lights">Lights</string>
 
 </resources>
